objects/csfb__Conga_Solution_Parameter__c.object
<CustomObject>
    <fields>
        <fullName>csfb__Comments__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>csfb__Conga_Solution__c</fullName>
        <label>Conga Solution</label>
        <referenceTo>csfb__Conga_Solution__c</referenceTo>
        <relationshipLabel>Conga Solution Parameters</relationshipLabel>
        <relationshipName>Conga_Solution_Parameters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>csfb__Name__c</fullName>
        <label>Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>csfb__Value__c</fullName>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <label>Conga Solution Parameter</label>
    <nameField>
        <displayFormat>CSP-{000000}</displayFormat>
        <label>Conga Solution Parameter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Solution Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>